--- a/css/theme-variables.css
+++ b/css/theme-variables.css
@@ -1,90 +1,1 @@
-.position-ab {
-  position: absolute;
-}
-.position-re {
-  position: relative;
-}
-.txt-dec-n {
-  text-decoration: none;
-}
-.list-ul ul {
-  padding: 0;
-}
-.list-style li {
-  list-style: none !important;
-}
-/* Clears all floats */
-.clear-all {
-  clear: both;
-}
-/* Clears left floats */
-.clear-left {
-  clear: left;
-}
-/* Clears right floats */
-.clear-right {
-  clear: right;
-}
-.icon-reset {
-  display: inline;
-  color: #5c6b71;
-  font-size: 14px;
-  font-family: FontAwesome;
-  font-weight: 400;
-  font-style: normal;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-h1,
-.h1 {
-  font-size: 32px;
-}
-h2,
-.h2 {
-  font-size: 32px;
-}
-h3,
-.h3 {
-  font-size: 29px;
-}
-h4,
-.h4 {
-  font-size: 33px;
-}
-h5,
-.h5 {
-  font-size: 31px;
-}
-h6,
-.h6 {
-  font-size: 17px;
-}
-a {
-  outline: none;
-  color: #004a99;
-  text-decoration: none;
-}
-a:focus,
-a:hover {
-  color: #004a99;
-}
-a:link,
-a:visited {
-  outline: none;
-  text-decoration: none;
-}
-a:active,
-a:focus,
-a:hover {
-  text-decoration: underline;
-}
-blockquote {
-  margin: 20px 0;
-  padding: 30px 0 30px 60px;
-  color: #5c6b71;
-  font-size: 2.000em;
-  font-weight: 300;
-  line-height: 47px;
-  border-left: 6px solid #004a99;
-}
+.position-ab{position:absolute}.position-re{position:relative}.txt-dec-n{text-decoration:none}.list-ul ul{padding:0}.list-style li{list-style:none !important}.clear-all{clear:both}.clear-left{clear:left}.clear-right{clear:right}.icon-reset{display:inline;color:#5c6b71;padding-right:15px;font-size:14px;font-family:FontAwesome;font-weight:400;font-style:normal;text-rendering:auto;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}h1,.h1{font-size:32px}h2,.h2{font-size:32px}h3,.h3{font-size:29px}h4,.h4{font-size:33px}h5,.h5{font-size:31px}h6,.h6{font-size:17px}a{outline:none;color:#eb6209;text-decoration:none}a:focus,a:hover{color:#004a99}a:link,a:visited{outline:none;text-decoration:none}a:active,a:focus,a:hover{text-decoration:underline}blockquote{margin:20px 0;padding:30px 0 30px 60px;color:#5c6b71;font-size:2em;font-weight:300;line-height:47px;border-left:6px solid #004a99}
