--- a/less/theme-variables.less
+++ b/less/theme-variables.less
@@ -36,6 +36,7 @@
 .icon-reset {
     display: inline;
     color: #5c6b71;
+    padding-right: 15px;
     font-size: 14px;
     font-family: FontAwesome;
     font-weight: 400;
@@ -87,7 +88,7 @@
 
 
 //** Global
-@link-color: @brand-primary;
+@link-color: @color-orange;
 @link-hover-color: @brand-primary;
 @text-decoration-none: none;
 @link-decoration-underline: underline;
