--- a/css/theme-2.css
+++ b/css/theme-2.css
@@ -48,6 +48,7 @@
 .icon-reset {
   display: inline;
   color: #5c6b71;
+  padding-right: 15px;
   font-size: 14px;
   font-family: FontAwesome;
   font-weight: 400;
@@ -82,7 +83,7 @@ h6,
 }
 a {
   outline: none;
-  color: #004a99;
+  color: #eb6209;
   text-decoration: none;
 }
 a:focus,
